--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,6 +56,7 @@ include/vulkan/meshVK.h
 include/vulkan/renderPassVK.h
 include/vulkan/deferredPassVK.h
 include/vulkan/compositionPassVK.h
+include/vulkan/depthPassVK.h
 
 
 #CPPS
@@ -84,6 +85,7 @@ src/vulkan/meshVK.cpp
 #render passes
 src/vulkan/deferredPassVK.cpp
 src/vulkan/compositionPassVK.cpp
+src/vulkan/depthPassVK.cpp
 )
 
 
